doing some things with styles now instead of in js

--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,26 @@ html, body, #cards {
 .card {
     width: 25%;
     height: 33.333%;
-    background-color: rgb(100, 100, 100);
     position: relative;
     display: block;
     float: left;
-    border: 1px solid black;
-    border-width: 1px;
     border-style: solid;
     border-color: rgb(0, 0, 0);
     box-sizing: border-box;
+}
+
+.unselected {
+    border-width: 1px;
+}
+
+.selected {
+    border-width: 3px;
+}
+
+.styleA {
+    background-color: rgb(100,100,100);
+}
+
+.styleB {
+    background-color: rgb(80,80,80);
 }
