--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,9 @@ html, body, #cards {
 .styleB {
     background-color: rgb(80,80,80);
 }
+
+p {
+    font-family: sans-serif;
+    font-size: 20px;
+    line-height: 24px;
+}
