--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,58 @@
 html, body, #cards {
-    height: 100%;
-}
+  height: 100%;
+  font-family: sans-serif;
+  font-size: 20px;
+  line-height: 24px; }
 
 .card {
-    width: 25%;
-    height: 33.333%;
-    position: relative;
-    display: block;
-    float: left;
-    border-style: solid;
-    border-color: rgb(0, 0, 0);
-    box-sizing: border-box;
-    border-width: 1px;
-}
+  width: 25%;
+  height: 33.333%;
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  float: left;
+  box-sizing: border-box;
+  border: 1px solid lightgray; }
+
+.card div {
+  width: 25%;
+  padding-bottom: 25%; }
+
+.solid div {
+  background-color: currentColor; }
+
+.empty div, .shaded div {
+  border: 4px solid currentColor; }
+
+.shaded.green div {
+  background-color: rgba(0, 128, 0, 0.2); }
+
+.shaded.red div {
+  background-color: rgba(255, 0, 0, 0.2); }
+
+.shaded.purple div {
+  background-color: rgba(128, 0, 128, 0.2); }
+
+.oval div {
+  border-radius: 999px; }
+
+.diamond div {
+  transform: rotate(45deg);
+  width: 20%;
+  padding-bottom: 20%; }
 
 .selected {
-    border-width: 3px;
-}
+  border-width: 3px; }
 
-.styleA {
-    background-color: rgb(100,100,100);
-}
+.red {
+  color: red; }
 
-.styleB {
-    background-color: rgb(80,80,80);
-}
+.purple {
+  color: purple; }
 
-p {
-    font-family: sans-serif;
-    font-size: 20px;
-    line-height: 24px;
-}
+.green {
+  color: green; }
+
+/*# sourceMappingURL=styles.css.map */
