--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,8 +1,11 @@
 $purple: purple;
 $red: red;
 $green: green;
+$gray: lightgray;
 
-html, body, #cards {
+html,
+body,
+.cards {
   font-family: sans-serif;
   font-size: 20px;
   height: 100%;
@@ -11,7 +14,7 @@ html, body, #cards {
 
 .card {
   align-items: center;
-  border: 1px solid lightgray;
+  border: 1px solid $gray;
   box-sizing: border-box;
   cursor: pointer;
   display: flex;
@@ -21,19 +24,20 @@ html, body, #cards {
   justify-content: space-around;
   position: relative;
   width: 25%;
-}
 
-.card div {
-  padding-bottom: 25%;
-  pointer-events: none;
-  width: 25%;
+  div {
+    padding-bottom: 25%;
+    pointer-events: none;
+    width: 25%;
+  }
 }
 
 .solid div {
   background-color: currentColor;
 }
 
-.empty div, .shaded div {
+.empty div,
+.shaded div {
   border: 4px solid currentColor;
 }
 
