--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,13 +3,15 @@ $red: red;
 $green: green;
 $gray: lightgray;
 
-html,
-body,
-.cards {
+body {
   font-family: sans-serif;
   font-size: 20px;
-  height: 100%;
   line-height: 24px;
+}
+
+.cards {
+  height: 100vh;
+  width: 100vw;
 }
 
 .card {
@@ -18,12 +20,33 @@ body,
   box-sizing: border-box;
   cursor: pointer;
   display: flex;
-  flex-direction: column;
   float: left;
-  height: 33.333%;
   justify-content: center;
   position: relative;
-  width: 25%;
+
+  .x-narrow & {
+    flex-direction: column;
+    height: 33.333%;
+    width: 25%;
+  }
+
+  .narrow & {
+    flex-direction: column;
+    height: 33.333%;
+    width: 25%;
+  }
+
+  .wide & {
+    flex-direction: row;
+    height: 33.333%;
+    width: 25%;
+  }
+
+  .x-wide & {
+    flex-direction: row;
+    height: 33.333%;
+    width: 25%;
+  }
 
   div {
     margin: 5%;
