--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 $purple: purple;
 $red: red;
 $green: green;
-$gray: lightgray;
+$gray: #efefef;
 
 body {
   font-family: sans-serif;
@@ -16,7 +16,7 @@ body {
 
 .card {
   align-items: center;
-  border: 1px solid $gray;
+  border: 2px solid $gray;
   box-sizing: border-box;
   cursor: pointer;
   display: flex;
@@ -67,7 +67,7 @@ body {
   }
 
   div {
-    border: 5px solid currentColor;
+    border: 6px solid currentColor;
     margin: 3%;
     padding-bottom: 12%;
     pointer-events: none;
@@ -95,14 +95,15 @@ body {
   border-radius: 999px;
 }
 
-.diamond div {
-  // padding-bottom: 20%;
-  // transform: rotate(45deg);
-  // width: 20%;
+.curve div {
+  border-radius: 0px 999px;
+  opacity: 1;
+  padding-bottom: 20%;
+  width: 5%;
 }
 
 .selected {
-  border-width: 3px;
+  border-width: 6px;
 }
 
 .red {
