--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,13 +1,11 @@
+// variables
+
 $purple: purple;
 $red: red;
 $green: green;
 $gray: #efefef;
 
-body {
-  font-family: sans-serif;
-  font-size: 20px;
-  line-height: 24px;
-}
+// cards
 
 .cards {
   height: 100vh;
@@ -75,6 +73,20 @@ body {
   }
 }
 
+// fills
+
+.red {
+  color: $red;
+}
+
+.purple {
+  color: $purple;
+}
+
+.green {
+  color: $green;
+}
+
 .solid div {
   background-color: currentColor;
 }
@@ -91,12 +103,14 @@ body {
   background-color: rgba($purple,.2);
 }
 
+// shapes
+
 .circle div {
   border-radius: 999px;
 }
 
 .curve div {
-  border-radius: 0px 999px;
+  border-radius: 0 999px;
   opacity: 1;
   padding-bottom: 20%;
   width: 5%;
@@ -104,16 +118,4 @@ body {
 
 .selected {
   border-width: 6px;
-}
-
-.red {
-  color: $red;
-}
-
-.purple {
-  color: $purple;
-}
-
-.green {
-  color: $green;
 }
